# BlendViewer

./: .gitignore  BlendViewer.sln  BlendViewer.vcxproj  BlendViewer.vcxproj.filters  CMakeLists.txt  CMakePresets.json  LICENSE  Main.qml  README.md  deploy.bat  main.cpp
assets/: blendviewer.rc
src/: main.cpp
ui/: Properties.qml  main.qml  qml.qrc
ui/sidebar/: AppInfo.qml  CameraControls.qml  CameraControlsHeader.qml  CameraSpeedController.qml  ImportFileButton.qml  SideBar.qml
ui/sidebar/cameracontrols/: CameraControls.qml  CameraControlsHeader.qml  ControlObject.qml
ui/sidebar/environments/: EnvironmentObject.qml  Environments.qml  EnvironmentsHeader.qml
ui/sidebar/filemanager/: FileManager.qml  FileManagerHeader.qml  FileObject.qml
ui/sidebar/quickviews/: QuickViews.qml  QuickViewsHeader.qml  ViewObject.qml
ui/statusbar/: StatusBar.qml  StatusLabel.qml
ui/viewport/: ViewPort.qml  ViewPortPlaceHolder.qml
